# MagicColor

./: README.md  colorize.py  data.py  export-model.ipynb  fine-tune.py  loss.py  pretrain.py  pyproject.toml  requirements.txt  test-compare.py
src/magiccolor/: model.py
