[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magiccolor"
description = "A deep learning model for colorizing grayscale images."
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
  "torch~=2.9.0",
  "huggingface_hub~=0.34.0",
  "safetensors~=0.4.3"
]
authors = [
  {name = "Andrew DalPino"},
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["mypy", "black", "build", "twine"]
test = ["mypy", "black"]

[project.urls]
Homepage = "https://github.com/andrewdalpino/MagicColor"
Documentation = "https://github.com/andrewdalpino/MagicColor/README.md"
Source = "https://github.com/andrewdalpino/MagicColor"
